--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
+    "morgan": "^1.10.0",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
